// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`projenrc.json default project 1`] = `
Object {
  ".gitattributes": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

/.gitattributes linguist-generated
/.github/workflows/pull-request-lint.yml linguist-generated
/.github/workflows/stale.yml linguist-generated
/.gitignore linguist-generated
/.projen/** linguist-generated
/.projen/deps.json linguist-generated
/.projen/files.json linguist-generated
/.projen/tasks.json linguist-generated",
  ".github/workflows/pull-request-lint.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: pull-request-lint
on:
  pull_request_target:
    types:
      - labeled
      - opened
      - synchronize
      - reopened
      - ready_for_review
      - edited
jobs:
  validate:
    name: Validate PR title
    runs-on: ubuntu-latest
    permissions:
      pull-requests: write
    steps:
      - uses: amannn/action-semantic-pull-request@v3.4.6
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
        with:
          types: |-
            feat
            fix
            chore
          requireScope: false
",
  ".github/workflows/stale.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: stale
on:
  schedule:
    - cron: 0 1 * * *
  workflow_dispatch: {}
jobs:
  stale:
    runs-on: ubuntu-latest
    permissions:
      issues: write
      pull-requests: write
    steps:
      - uses: actions/stale@v4
        with:
          days-before-stale: -1
          days-before-close: -1
          days-before-pr-stale: 14
          days-before-pr-close: 2
          stale-pr-message: This pull request is now marked as stale because it hasn't seen activity for a while. Add a comment or it will be closed soon. If you wish to exclude this issue from being marked as stale, add the \\"backlog\\" label.
          close-pr-message: Closing this pull request as it hasn't seen activity for a while. Please add a comment @mentioning a maintainer to reopen. If you wish to exclude this issue from being marked as stale, add the \\"backlog\\" label.
          stale-pr-label: stale
          exempt-pr-labels: backlog
          days-before-issue-stale: 60
          days-before-issue-close: 7
          stale-issue-message: This issue is now marked as stale because it hasn't seen activity for a while. Add a comment or it will be closed soon. If you wish to exclude this issue from being marked as stale, add the \\"backlog\\" label.
          close-issue-message: Closing this issue as it hasn't seen activity for a while. Please add a comment @mentioning a maintainer to reopen. If you wish to exclude this issue from being marked as stale, add the \\"backlog\\" label.
          stale-issue-label: stale
          exempt-issue-labels: backlog
",
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
node_modules/
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
!/.projen/files.json
!/.github/workflows/pull-request-lint.yml
!/.github/workflows/stale.yml
",
  ".projen/files.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "files": Array [
      ".gitattributes",
      ".github/workflows/pull-request-lint.yml",
      ".github/workflows/stale.yml",
      ".gitignore",
      ".projen/deps.json",
      ".projen/files.json",
      ".projen/tasks.json",
    ],
  },
  ".projen/tasks.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "tasks": Object {
      "build": Object {
        "description": "Full release build",
        "name": "build",
        "steps": Array [
          Object {
            "spawn": "default",
          },
          Object {
            "spawn": "pre-compile",
          },
          Object {
            "spawn": "compile",
          },
          Object {
            "spawn": "post-compile",
          },
          Object {
            "spawn": "test",
          },
          Object {
            "spawn": "package",
          },
        ],
      },
      "compile": Object {
        "description": "Only compile",
        "name": "compile",
      },
      "default": Object {
        "description": "Synthesize project files",
        "env": Object {
          "FILENAME": ".projenrc.json",
        },
        "name": "default",
        "steps": Array [
          Object {
            "builtin": "run-projenrc-json",
          },
        ],
      },
      "eject": Object {
        "description": "Remove projen from the project",
        "env": Object {
          "PROJEN_EJECTING": "true",
        },
        "name": "eject",
        "steps": Array [
          Object {
            "spawn": "default",
          },
        ],
      },
      "package": Object {
        "description": "Creates the distribution package",
        "name": "package",
      },
      "post-compile": Object {
        "description": "Runs after successful compilation",
        "name": "post-compile",
      },
      "pre-compile": Object {
        "description": "Prepare the project for compilation",
        "name": "pre-compile",
      },
      "test": Object {
        "description": "Run tests",
        "name": "test",
      },
    },
  },
  ".projen/tree.json": Object {
    "tree": Object {
      "children": Object {
        ".gitattributes": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": ".gitattributes",
          "path": "my-project/.gitattributes",
        },
        ".gitignore": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": ".gitignore",
          "path": "my-project/.gitignore",
        },
        ".projen--files.json": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": ".projen--files.json",
          "path": "my-project/.projen--files.json",
        },
        "Dependencies": Object {
          "children": Object {
            ".projen--deps.json": Object {
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.78",
              },
              "id": ".projen--deps.json",
              "path": "my-project/Dependencies/.projen--deps.json",
            },
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "Dependencies",
          "path": "my-project/Dependencies",
        },
        "GitHub": Object {
          "children": Object {
            "Mergify": Object {
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.78",
              },
              "id": "Mergify",
              "path": "my-project/GitHub/Mergify",
            },
            "PullRequestLint": Object {
              "children": Object {
                "pull-request-lint": Object {
                  "children": Object {
                    ".github--workflows--pull-request-lint.yml": Object {
                      "constructInfo": Object {
                        "fqn": "constructs.Construct",
                        "version": "10.0.78",
                      },
                      "id": ".github--workflows--pull-request-lint.yml",
                      "path": "my-project/GitHub/PullRequestLint/pull-request-lint/.github--workflows--pull-request-lint.yml",
                    },
                  },
                  "constructInfo": Object {
                    "fqn": "constructs.Construct",
                    "version": "10.0.78",
                  },
                  "id": "pull-request-lint",
                  "path": "my-project/GitHub/PullRequestLint/pull-request-lint",
                },
              },
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.78",
              },
              "id": "PullRequestLint",
              "path": "my-project/GitHub/PullRequestLint",
            },
            "Stale": Object {
              "children": Object {
                "stale": Object {
                  "children": Object {
                    ".github--workflows--stale.yml": Object {
                      "constructInfo": Object {
                        "fqn": "constructs.Construct",
                        "version": "10.0.78",
                      },
                      "id": ".github--workflows--stale.yml",
                      "path": "my-project/GitHub/Stale/stale/.github--workflows--stale.yml",
                    },
                  },
                  "constructInfo": Object {
                    "fqn": "constructs.Construct",
                    "version": "10.0.78",
                  },
                  "id": "stale",
                  "path": "my-project/GitHub/Stale/stale",
                },
              },
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.78",
              },
              "id": "Stale",
              "path": "my-project/GitHub/Stale",
            },
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "GitHub",
          "path": "my-project/GitHub",
        },
        "Logger": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "Logger",
          "path": "my-project/Logger",
        },
        "ProjectBuild": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "ProjectBuild",
          "path": "my-project/ProjectBuild",
        },
        "Projenrc": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "Projenrc",
          "path": "my-project/Projenrc",
        },
        "README.md": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "README.md",
          "path": "my-project/README.md",
        },
        "Tasks": Object {
          "children": Object {
            ".projen--tasks.json": Object {
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.78",
              },
              "id": ".projen--tasks.json",
              "path": "my-project/Tasks/.projen--tasks.json",
            },
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "Tasks",
          "path": "my-project/Tasks",
        },
        "VsCode": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "VsCode",
          "path": "my-project/VsCode",
        },
      },
      "constructInfo": Object {
        "fqn": "constructs.Construct",
        "version": "10.0.78",
      },
      "id": "my-project",
      "path": "my-project",
    },
    "version": "tree-0.1",
  },
  "README.md": "# replace this",
}
`;

exports[`projenrc.json with typed options 1`] = `
Object {
  ".gitattributes": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

/.gitattributes linguist-generated
/.github/workflows/pull-request-lint.yml linguist-generated
/.github/workflows/stale.yml linguist-generated
/.gitignore linguist-generated
/.projen/** linguist-generated
/.projen/deps.json linguist-generated
/.projen/files.json linguist-generated
/.projen/tasks.json linguist-generated",
  ".github/workflows/pull-request-lint.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: pull-request-lint
on:
  pull_request_target:
    types:
      - labeled
      - opened
      - synchronize
      - reopened
      - ready_for_review
      - edited
jobs:
  validate:
    name: Validate PR title
    runs-on: ubuntu-latest
    permissions:
      pull-requests: write
    steps:
      - uses: amannn/action-semantic-pull-request@v3.4.6
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
        with:
          types: |-
            feat
            fix
            chore
          requireScope: false
",
  ".github/workflows/stale.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: stale
on:
  schedule:
    - cron: 0 1 * * *
  workflow_dispatch: {}
jobs:
  stale:
    runs-on: ubuntu-latest
    permissions:
      issues: write
      pull-requests: write
    steps:
      - uses: actions/stale@v4
        with:
          days-before-stale: -1
          days-before-close: -1
          days-before-pr-stale: -1
          days-before-pr-close: -1
          days-before-issue-stale: 100
          days-before-issue-close: 7
          stale-issue-message: This issue is now marked as stale because it hasn't seen activity for a while. Add a comment or it will be closed soon. If you wish to exclude this issue from being marked as stale, add the \\"backlog\\" label.
          close-issue-message: Closing this issue as it hasn't seen activity for a while. Please add a comment @mentioning a maintainer to reopen. If you wish to exclude this issue from being marked as stale, add the \\"backlog\\" label.
          stale-issue-label: stale
          exempt-issue-labels: backlog
",
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
node_modules/
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
!/.projen/files.json
!/.github/workflows/pull-request-lint.yml
!/.github/workflows/stale.yml
",
  ".projen/files.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "files": Array [
      ".gitattributes",
      ".github/workflows/pull-request-lint.yml",
      ".github/workflows/stale.yml",
      ".gitignore",
      ".projen/deps.json",
      ".projen/files.json",
      ".projen/tasks.json",
    ],
  },
  ".projen/tasks.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "tasks": Object {
      "build": Object {
        "description": "Full release build",
        "name": "build",
        "steps": Array [
          Object {
            "spawn": "default",
          },
          Object {
            "spawn": "pre-compile",
          },
          Object {
            "spawn": "compile",
          },
          Object {
            "spawn": "post-compile",
          },
          Object {
            "spawn": "test",
          },
          Object {
            "spawn": "package",
          },
        ],
      },
      "compile": Object {
        "description": "Only compile",
        "name": "compile",
      },
      "default": Object {
        "description": "Synthesize project files",
        "env": Object {
          "FILENAME": ".projenrc.json",
        },
        "name": "default",
        "steps": Array [
          Object {
            "builtin": "run-projenrc-json",
          },
        ],
      },
      "eject": Object {
        "description": "Remove projen from the project",
        "env": Object {
          "PROJEN_EJECTING": "true",
        },
        "name": "eject",
        "steps": Array [
          Object {
            "spawn": "default",
          },
        ],
      },
      "package": Object {
        "description": "Creates the distribution package",
        "name": "package",
      },
      "post-compile": Object {
        "description": "Runs after successful compilation",
        "name": "post-compile",
      },
      "pre-compile": Object {
        "description": "Prepare the project for compilation",
        "name": "pre-compile",
      },
      "test": Object {
        "description": "Run tests",
        "name": "test",
      },
    },
  },
  ".projen/tree.json": Object {
    "tree": Object {
      "children": Object {
        ".gitattributes": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": ".gitattributes",
          "path": "@example--foo/.gitattributes",
        },
        ".gitignore": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": ".gitignore",
          "path": "@example--foo/.gitignore",
        },
        ".projen--files.json": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": ".projen--files.json",
          "path": "@example--foo/.projen--files.json",
        },
        "Dependencies": Object {
          "children": Object {
            ".projen--deps.json": Object {
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.78",
              },
              "id": ".projen--deps.json",
              "path": "@example--foo/Dependencies/.projen--deps.json",
            },
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "Dependencies",
          "path": "@example--foo/Dependencies",
        },
        "GitHub": Object {
          "children": Object {
            "Mergify": Object {
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.78",
              },
              "id": "Mergify",
              "path": "@example--foo/GitHub/Mergify",
            },
            "PullRequestLint": Object {
              "children": Object {
                "pull-request-lint": Object {
                  "children": Object {
                    ".github--workflows--pull-request-lint.yml": Object {
                      "constructInfo": Object {
                        "fqn": "constructs.Construct",
                        "version": "10.0.78",
                      },
                      "id": ".github--workflows--pull-request-lint.yml",
                      "path": "@example--foo/GitHub/PullRequestLint/pull-request-lint/.github--workflows--pull-request-lint.yml",
                    },
                  },
                  "constructInfo": Object {
                    "fqn": "constructs.Construct",
                    "version": "10.0.78",
                  },
                  "id": "pull-request-lint",
                  "path": "@example--foo/GitHub/PullRequestLint/pull-request-lint",
                },
              },
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.78",
              },
              "id": "PullRequestLint",
              "path": "@example--foo/GitHub/PullRequestLint",
            },
            "Stale": Object {
              "children": Object {
                "stale": Object {
                  "children": Object {
                    ".github--workflows--stale.yml": Object {
                      "constructInfo": Object {
                        "fqn": "constructs.Construct",
                        "version": "10.0.78",
                      },
                      "id": ".github--workflows--stale.yml",
                      "path": "@example--foo/GitHub/Stale/stale/.github--workflows--stale.yml",
                    },
                  },
                  "constructInfo": Object {
                    "fqn": "constructs.Construct",
                    "version": "10.0.78",
                  },
                  "id": "stale",
                  "path": "@example--foo/GitHub/Stale/stale",
                },
              },
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.78",
              },
              "id": "Stale",
              "path": "@example--foo/GitHub/Stale",
            },
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "GitHub",
          "path": "@example--foo/GitHub",
        },
        "Logger": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "Logger",
          "path": "@example--foo/Logger",
        },
        "ProjectBuild": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "ProjectBuild",
          "path": "@example--foo/ProjectBuild",
        },
        "Projenrc": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "Projenrc",
          "path": "@example--foo/Projenrc",
        },
        "README.md": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "README.md",
          "path": "@example--foo/README.md",
        },
        "Tasks": Object {
          "children": Object {
            ".projen--tasks.json": Object {
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.78",
              },
              "id": ".projen--tasks.json",
              "path": "@example--foo/Tasks/.projen--tasks.json",
            },
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "Tasks",
          "path": "@example--foo/Tasks",
        },
        "VsCode": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "VsCode",
          "path": "@example--foo/VsCode",
        },
      },
      "constructInfo": Object {
        "fqn": "constructs.Construct",
        "version": "10.0.78",
      },
      "id": "@example--foo",
      "path": "@example--foo",
    },
    "version": "tree-0.1",
  },
  ".projenrc.json": Object {
    "name": "@example/foo",
    "npmAccess": "public",
    "staleOptions": Object {
      "issues": Object {
        "daysBeforeStale": 100,
      },
      "pullRequest": Object {
        "enabled": false,
      },
    },
    "type": "projen.typescript.TypeScriptProject",
  },
  "README.md": "# replace this",
}
`;
